--- a/style.css
+++ b/style.css
@@ -266,7 +266,6 @@ body {
 @media (max-width:768px){
 	.Sidebar .logo {
 		width: 100%;
-		max-width: 450px;
 		margin-top: 80px;
 	}
 }
@@ -444,6 +443,11 @@ body {
 		width: 120px;
 	}
 }
+@media (max-width: 768px) {
+	.Sidebar .logout-button.entry {
+		margin: auto;
+	}
+}
 
 .Sidebar .logout-button.entry::after {
   top: 5px;
@@ -611,6 +615,13 @@ body {
 	.Dashboard .modal {
 		border-radius: 0;
 		padding: 70px 20px;
+	}
+}
+
+
+@media (max-width: 768px){
+	.manage__custom-row {
+		display:flex
 	}
 }
 
@@ -964,7 +975,7 @@ body {
 @media (max-width: 768px){
 	.Dashboard .modal .Table  {
 		display: block;
-		width: 100%;
+		width: 67%;
 	}
 }
 @media (max-width: 768px){
@@ -974,11 +985,11 @@ body {
 }
 .Table tr {
 	display:table-cell;
-	padding-right: 20px;
+
 }
 .Table td {
 	display:block;
-	padding:15px;
+	padding:15px 0 15px 0;
 	margin-bottom:15px;
 }
 }
@@ -997,10 +1008,11 @@ body {
 		margin-bottom: -20px;
 	}
 }
-@media (max-width: 525px){
+@media (max-width: 768px){
 	.Dashboard .modal .Table-header {
 		flex-direction:column;
-		row-gap: 100px;
+		row-gap: 285px;
+		width: calc(42% + 20px);
 	}
 }
 
@@ -1018,6 +1030,11 @@ body {
 @media (max-width: 1350px){
 	.Dashboard .modal .Table-group {
 		height: 45px;
+	}
+}
+@media (max-width: 768px){
+	.Dashboard .modal .Table-group {
+		outline: none;
 	}
 }
 
@@ -1051,16 +1068,17 @@ body {
 }
 @media (max-width: 768px){
 	.Dashboard .modal .Table-group:first-of-type  {
-		width: 75%;
+		width: 24%;
+		display:block
 	}
 }
-@media (max-width: 525px){
+/* @media (max-width: 525px){
 	.Dashboard .modal .Table-group:first-of-type  {
 		width: 95%;
 		margin-right:20px;
 		padding: 0 10px 0 10px;
 	}
-}
+} */
 
 .Dashboard .modal .Table-group:last-of-type {
   width: 245px;
@@ -1111,6 +1129,20 @@ body {
 		padding: 0 5px;
 	}
 }
+@media (max-width: 768px){
+	.Dashboard .modal .Table-group > div  {
+		font-weight: 600;
+	}
+}
+@media (max-width: 768px){
+	.Dashboard .modal .Table-group > div:first-child {
+		padding-top:10px;
+}
+	.Dashboard .modal .Table-group > div:not(:last-child) {
+			margin-bottom:42px;
+			font-weight:600;
+	}
+}
 
 .Dashboard .modal .Table-group > div:not(:last-of-type)::after {
   content: "|";
@@ -1119,7 +1151,7 @@ body {
   top: 0;
   color: #FA7931;
 }
-@media (max-width: 375px){
+@media (max-width: 768px){
 	.Dashboard .modal .Table-group > div:not(:last-of-type)::after {
 		display:none;
 	}
@@ -1134,13 +1166,18 @@ body {
   max-height: 100%;
   width: calc(100% + 20px);
   display: block;
-  overflow-y: scroll;
   max-height: 650px;
   padding: 0 10px 0 0;
 }
+@media (min-width: 768px){
+	.Dashboard .modal .Table tbody {
+		overflow-y:scroll;
+	}
+}
 @media (max-width: 768px){
 	.Dashboard .modal .Table tbody {
-		overflow:scroll;
+		overflow-x:scroll;
+		padding: 0 30px 0 0;
 	}
 }
 
@@ -1206,6 +1243,7 @@ body {
 @media (max-width: 768px){
 	.Dashboard .modal .Table tbody tr td  {
 		display:flex;
+		margin-right:30px;
 	}
 }
 
@@ -1220,7 +1258,7 @@ body {
 }
 @media (max-width: 768px){
 	.Dashboard .modal .Table tbody tr td:not(:last-of-type)  {
-		width: 100%;
+		width: 80%;
 		border-radius: 14px;
 		display:flex;
 		justify-content:center;
@@ -1235,7 +1273,7 @@ body {
 }
 @media (max-width: 768px){
 	.Dashboard .modal .Table tbody tr td.name, .Dashboard .modal .Table tbody tr td.tour  {
-		width: 100%;
+		width: 80%;
 		max-width: none;
 		border-radius: 14px;
 		display: flex;
@@ -1264,7 +1302,7 @@ body {
 	.Dashboard .modal .Table tbody tr td:nth-last-of-type(2)  {
 		border-radius: 14px;
 		padding: 15px;
-		min-height:50px;
+		min-height:46px;
 		display:flex;
 		justify-content:center;
 		/* rr */
@@ -1301,11 +1339,12 @@ body {
 		width: 45px;
 	}
 }
-@media (max-width: 768px){
+/* @media (max-width: 768px){
 	.Dashboard .modal .Table tbody tr td .table-button  {
-		margin-bottom: 15px;
+		height: 40px;
+		width: 40px;
 	}
-}
+} */
 
 .Dashboard .modal .Table tbody tr td .table-button:first-of-type {
   margin-left: 20px;
@@ -1317,7 +1356,7 @@ body {
 }
 @media (max-width: 768px){
 	.Dashboard .modal .Table tbody tr td .table-button:first-of-type {
-		margin-left: 10px;
+		margin-left: 0px;
 	}
 }
 
@@ -1334,6 +1373,12 @@ body {
 		background: url(images/cross.svg) 50% 50% / 20px 20px  no-repeat #FA7931;
 	}
 }
+@media (max-width: 1185px){
+	.Dashboard .modal .Table tbody tr td .table-button.delete  {
+		background: url(images/cross.svg) 50% 50% / 18px 18px  no-repeat #FA7931;
+	}
+}
+
 .Dashboard .modal .Table tbody tr td .table-button.edit {
 	background: url(images/pen.svg) 50% 50% / 40px 40px  no-repeat #FA7931;
 }
@@ -1347,6 +1392,12 @@ body {
 		background: url(images/pen.svg) 50% 50% / 20px 20px  no-repeat #FA7931;
 	}
 }
+@media (max-width: 768px){
+	.Dashboard .modal .Table tbody tr td .table-button.edit  {
+		background: url(images/pen.svg) 50% 50% / 18px 18px  no-repeat #FA7931;
+	}
+}
+
 
 .Dashboard .modal .Table tbody tr td .table-button.copy {
 	background: url(images/copy.png) 50% 50% / 40px 40px  no-repeat #FA7931;
@@ -1359,6 +1410,11 @@ body {
 @media (max-width: 1185px){
 	.Dashboard .modal .Table tbody tr td .table-button.copy  {
 		background: url(images/copy.png) 50% 50% / 20px 20px  no-repeat #FA7931;
+	}
+}
+@media (max-width: 768px){
+	.Dashboard .modal .Table tbody tr td .table-button.copy  {
+		background: url(images/copy.png) 50% 50% / 18px 18px  no-repeat #FA7931;
 	}
 }
 
